fix(organizers): toggle names with 'display' instead of 'visibility'

--- a/app/styles/components/_organizers.scss
+++ b/app/styles/components/_organizers.scss
@@ -22,7 +22,7 @@
   height: 100%;
 
   &:hover .organizer-header {
-    visibility: visible;
+    display: block;
   }
 }
 
@@ -32,7 +32,7 @@
   bottom: 100%;
   border: 1px solid $color-black;
   padding: 2%;
-  visibility: hidden;
+  display: none;
   text-align: center;
   width: 110%;
   background-color: $color-white;
